r5x: configs: Import Custom `thermal-engine.conf`
* Custom configured based on real time testings

Signed-off-by: Christopher <mizdrake7@gmail.com>

--- a/configs/thermal/thermal-engine.conf
+++ b/configs/thermal/thermal-engine.conf
@@ -1,2 +1,225 @@
-# File empty by default.
-# Replace contents of this file with custom configuration.
+# BRUNETTE-THERMAL
+# VERSION = v0.05 | ALPHA STAGE
+# Credits : IT&AUTOS
+# SENSOR : ALIAS
+# tsens_tz_sensor1 : cpu0-cpu1-cpu2-cpu3
+# tsens_tz_sensor8 : gpu
+# tsens_tz_sensor6 : cpu7
+# tsens_tz_sensor5 : cpu6
+# tsens_tz_sensor4 : cpu5
+# tsens_tz_sensor3 : cpu4
+
+#cluster0    610411  719800  811800  925400  1011111  1106740  1255600  1304600  1352710  1457600  1502000  1657800   1712980  1751288  1782000  1790990  1800990
+
+#cluster1   1056200  1203800  1300600  1356712  1453710  1550346  1605200  1686800  1726800  1806800  1856540  1905811  1955400  1975178  2014800  2015909  2015909
+
+#gpu    300000000  388000000  486666000  556666666  6038531500  668978400  734100000   785984585  838598500  863980451  876840000  887689000  892390000  920814300  932666660  942999999 950999999
+
+#debug
+#Conf file: vendor/etc/thermal-engine-pubgm.conf
+
+[PUBGM_THERM]
+algo_type monitor
+sampling 1000
+sensor quiet_therm
+thresholds 49000 52000 55000 70000 85000 90000	
+thresholds_clr 44000 45000 48000 52000 70000 78000
+actions cluster0+cluster1+gpu cluster0+cluster1+gpu cluster0+cluster1 cluster0+cluster1 cluster0+cluster1+gpu+camcorder cluster0+cluster1+gpu+camcorder+shutdown
+action_info 1747200+1958400+370000000 1536000+1747200+370000000 1401600+1401600 1113600+1113600 633600+1113600+370000000+1 633600+1113600+160000000+10+5000
+
+[SS-QUIET-THERM-SILVER]
+disable 0
+
+[SS-QUIET-THERM-GOLD]
+disable 0
+
+[SS-QUIET-THERM-GPU]
+disable 0
+
+[VIRTUAL-CLUSTER1]
+algo_type virtual
+trip_sensor tsens_tz_sensor3
+set_point 73000
+set_point_clr 61000
+sensors tsens_tz_sensor3 tsens_tz_sensor4 tsens_tz_sensor5 tsens_tz_sensor6 tsens_tz_sensor7 tsens_tz_sensor12
+weights
+sampling 10
+math 2
+
+[VIRTUAL-CLUSTER0]
+algo_type virtual
+trip_sensor tsens_tz_sensor1
+set_point 73000
+set_point_clr 61000
+sensors tsens_tz_sensor1 tsens_tz_sensor2
+weights
+sampling 10
+math 2
+
+[VIRTUAL-CPU]
+algo_type virtual
+trip_sensor quiet_therm
+set_point 48000
+set_point_clr 45000
+sensors tsens_tz_sensor5
+weights
+sampling 1000
+math 2
+
+[SS-GPU]
+algo_type ss
+sampling 10
+sensor gpu
+device gpu
+set_point 130000
+set_point_clr 88000
+time_constant 0
+device_max_limit 588000000
+
+[SPEAKER-CAL]
+sampling 30000 30000 10 1800000
+sensor pm660_tz
+sensors tsens_tz_sensor8 tsens_tz_sensor9 tsens_tz_sensor10 tsens_tz_sensor11 tsens_tz_sensor13
+temp_range 6000 10000 2000
+max_temp 45000
+offset -4000
+
+[VDD_RSTR_MONITOR-TSENS13]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor13
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
+
+[VDD_RSTR_MONITOR-TSENS12]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor12
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
+
+[VDD_RSTR_MONITOR-TSENS11]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor11
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
+
+[VDD_RSTR_MONITOR-TSENS10]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor10
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
+
+[VDD_RSTR_MONITOR-TSENS9]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor9
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
+
+[VDD_RSTR_MONITOR-TSENS8]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor8
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
+
+[VDD_RSTR_MONITOR-TSENS7]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor7
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
+
+[VDD_RSTR_MONITOR-TSENS6]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor6
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
+
+[VDD_RSTR_MONITOR-TSENS5]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor5
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
+
+[VDD_RSTR_MONITOR-TSENS4]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor4
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
+
+[VDD_RSTR_MONITOR-TSENS3]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor3
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
+
+[VDD_RSTR_MONITOR-TSENS2]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor2
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
+
+[VDD_RSTR_MONITOR-TSENS1]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor1
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
+
+[VDD_RSTR_MONITOR-TSENS0]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor0
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
